    ``gtk2``, ``mongo``, ``cairo``, ``tcl``, ``python`` and 
    `more <https://github.com/Araq/Nimrod/issues/623>`_. They can be
    found under the `nim-code <https://github.com/nimrod-code>`_ organisation.
  - Removed the deprecated ``web`` module, the ``httpclient`` module should
    be used instead.
  - String case (or any non-ordinal case) statements 
    without 'else' are deprecated.


  Language Additions
  ------------------

  - There is a new ``parallel`` statement for safe fork&join parallel computing.
  - ``guard`` and ``lock`` pragmas have been implemented to support safer
    concurrent programming.
  - ``system.writeFile`` can be used at compile-time.

  Library Additions
  -----------------

  - Added module ``cpuinfo``.
  - Added module ``threadpool``.
  - ``sequtils.distnct`` has been renamed to ``sequtils.deduplicate``.
  - Added ``algorithm.reversed``
  - Added ``uri.combine`` and ``uri.parseUri``.
  - Some sockets procedures now support a ``SafeDisconn`` flag which causes 
    them to handle disconnection errors and not raise them.


2014-04-21 Version 0.9.4 released
=================================

The Nimrod development community is proud to announce the release of version
0.9.4 of the Nimrod compiler and tools. **Note: This release has to be
considered beta quality! Lots of new features have been implemented but
unfortunately some do not fullfill our quality standards yet.**

Prebuilt binaries and instructions for building from source are available
on the `download page <download.html>`_.

This release includes about 
`1400 changes <https://github.com/Araq/Nimrod/compare/v0.9.2...v0.9.4>`_
in total including various bug
fixes, new languages features and standard library additions and improvements.
This release brings with it support for user-defined type classes, a brand
new VM for executing Nimrod code at compile-time and new symbol binding
rules for clean templates.

It also introduces support for the brand new