@@ -49,6 +49,7 @@ News
     be used instead.
   - String case (or any non-ordinal case) statements 
     without 'else' are deprecated.
+  - Recursive tuple types are deprecated. Use ``object`` instead.
 
 
   Language Additions
